# torch_numopt

./: .gitignore  .readthedocs.yaml  README.md  argparse  ast  class_structure.txt  importlib  inspect  os  pkgutil  pyproject.toml  sys
docs/: api_reference.available_algorithms.rst  api_reference.building_algorithms.rst  api_reference.rst  conf.py  index.rst  quickstart.rst  torch_numopt.base_classes.rst  torch_numopt.implemented_algorithms.rst
docs/auto/: torch_numopt.algorithms.adahessian.rst  torch_numopt.algorithms.conjugate_gradient.rst  torch_numopt.algorithms.gauss_newton.rst  torch_numopt.algorithms.gradient_descent.rst  torch_numopt.rst  (+22 more)
examples/: init_lr_methods.ipynb  ls_conditions.ipynb  ls_methods.ipynb  new_api.ipynb  quick_tests_adahessian.ipynb  quick_tests_agd.ipynb  quick_tests_baseline.ipynb  quick_tests_cg.ipynb  quick_tests_cg_methods.ipynb  quick_tests_damped-newton.ipynb  quick_tests_damped_newton.ipynb  quick_tests_gauss_newton.ipynb  quick_tests_gd.ipynb  quick_tests_gd_lr_init.ipynb  quick_tests_gdls.ipynb  quick_tests_gdls_lr_init.ipynb  quick_tests_gdls_ls_conditions.ipynb  quick_tests_gdls_ls_methods.ipynb  quick_tests_lm.ipynb  quick_tests_lm_methods.ipynb  quick_tests_newton.ipynb  quick_tests_newton_ls_conditions.ipynb  quick_tests_newton_ls_methods.ipynb  quick_tests_newton_solvers.ipynb  quick_tests_newton_tr_methods.ipynb  train_loop.py
perf_tests/: perf_test_gauss_newton.py
test/: conftest.py  test_curvature.py  test_first_order.py  test_integration.py  test_line_search.py  test_objective.py  test_optimizers.py  test_param_funcs.py  test_residual.py  test_scaling_matrix.py  test_second_order.py  test_solve_system.py  test_trust_region.py  test_utils.py
(+77 files in other folders)
