[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_numopt"
version = "0.3.1"
description = "Classic numerical optimization methods for Pytorch neural networks"
readme = "README.md"
authors = [
    { name = "eugenioLR", email = "eugeniolorente0@gmail.com" }
]

requires-python = ">=3.10"
dependencies = [
    "torch"
]

[project.urls]
Homepage = "https://github.com/GheodeAI/torch_numopt"

[project.optional-dependencies]
dev = [
    "scikit-learn",
    "matplotlib",
    "numpy",
    "torchvision",
    "jupyter",
    "sphinx>=7.1.1",
    "sphinx_material",
    "black[jupyter]",
    "pytest"
]

[tool.black]
line-length = 150
target-version = ['py310']